# llm_project

./: .gitignore  README.md  main.py  pyproject.toml
classification_finetune_gpt2_app/: app.py  model.py  test.csv  train.csv  validation.csv
data/: DataLoaders.py  Datasets.py
data/.ipynb_checkpoints/: DataLoaders-checkpoint.py  Datasets-checkpoint.py
exp_notebooks/: Llama32_from_scratch.ipynb  classification_finetuning.ipynb  experiment_training_finetune_gpt2_gradio.ipynb  gpt2_layernorm_ffn_gelu_shortcut_connection_transformer_block_gpt.ipynb  gpt2_to_llama2.ipynb  gradio_classification_finetune_gpt2.ipynb  gradio_instruction_finetune_gpt2.ipynb  gradio_pretrained_gpt2.ipynb  instruction_finetuning.ipynb  learning_rate_warmup_cosine_decay_gradient_clipping.ipynb  llama2_to_llama3.ipynb  peft_with_LoRA.ipynb  pretraining_temperature_topk_topp_openAI_weights.ipynb  self_attention_causal_attention_multihead.ipynb  tokenizer_bpe_dataloader_positional_encoding.ipynb  understanding_pytorch_buffers.ipynb
exp_notebooks/.ipynb_checkpoints/: evironment_setup_sanity_check-checkpoint.ipynb  gpt2_layernorm_ffn_gelu_shortcut_connection_transformer_block_gpt-checkpoint.ipynb  pretraining_temperature_topk_topp_openAI_weights-checkpoint.ipynb  understanding_pytorch_buffers-checkpoint.ipynb
instruction_finetune_gpt2_app/: app.py  instruction-data-with-response.json  model.py  requirements.txt
modeling/: train.py
models/: gpt2.py  llama2.py  llama3.py
pretrained_gpt_app/: app.py  model.py
utils/: downloader.py  helper_functions.py  plotting.py  tokenizers.py
(+2 files in other folders)
