[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.33.0",
    "matplotlib>=3.10.3",
    "numpy",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
